--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-dark ">
-<a class="navbar-brand" href="index.html"><img id = "logo" src ="images/logo.png"></a>
+<a class="navbar-brand" href="index.html">Hypixel User Stats!</a>
 
 
 
@@ -19,8 +19,9 @@
 <div class="collapse navbar-collapse" id="navbarNav">
 <ul class="navbar-nav">
 <li class="nav-item">
-  <h1 id= "name">THE FAKE NEWS NETWORK</h1>
+
 </li>
+<!-- <input id="userInput" placeholder="ENTER USERNAME HERE!." text-align= "center" type="text"></input><br/> -->
 <li class="nav-item">
 
 </li>
@@ -31,22 +32,16 @@
 </div>
 </nav>
 <body>
-  <marquee id= "notice" scrollamount="18"><strong>The pandemic is finally ending. Please get vaccinated so we can go back to our normal life!</strong></marquee>
 
-  <h1 id= "title">Here you shall find the most accurate weather are databases can find!</h1>
 
 
 
   <form>
 
-    <input id="weatherInput" placeholder="ENTER THE CITY HERE." text-align= "center" type="text"></input><br/>
-    <input id="weatherSubmit" type="submit" value="Submit"></input>
+    <input id="userInput" placeholder="ENTER USERNAME HERE!." text-align= "center" type="text"></input><br/>
+    <input id="userSubmit" type="submit" value="Submit"></input>
   </form>
-  <div id="weatherResults">
-  </div>
-
-  <div id="forecastResults">
-  	</div>
+<div id=userResults> </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js" integrity="sha256-4iQZ6BVL4qNKlQ27TExEhBN1HFPvAvAMbFavKKosSWQ=" crossorigin="anonymous"></script>
   <script text="type/javascript" src="script.js">
@@ -55,7 +50,7 @@
   <footer>
 <div class="footer-content">
 
-   <a href="https://github.com/BYU-CS-260-Winter-2021/lab-2-weather-app-ninjagold007.git" target="_blank">Github Repository</a> <!-- opens in new tab -->
+   <a href="https://github.com/ninjagold007/c2.git" target="_blank">Github Repository</a> <!-- opens in new tab -->
 
 </div>
 </footer>
